<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Visualizer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_basic_stats">Basic Stats</string>
    <string name="time_period_placeholder">42 days</string>
    <string name="sent_messages_placeholder">sent 1337</string>
    <string name="received_messages_placeholder">received 1024</string>
    <string name="total_messages_placeholder">total 2361</string>
    <string name="analysis_placeholder">People talk to you more than you talk to them.</string>
    <string name="title_activity_people_stats">People</string>
    <string name="name_placeholder">Linux Torvalds</string>
    <string name="address_placeholder">(123) 456 7890</string>
    <string name="message_count_placeholder">402 messages</string>
    <string name="sent_count_placeholder">(40 sent, </string>
    <string name="received_count_placeholder">362 received)</string>
    <string name="title_activity_message_stats">MessageStatsActivity</string>

</resources>
