<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BasicStatsActivity" >

    <TextView
        android:id="@+id/time_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_period_placeholder" />

    <TextView
        android:id="@+id/sent_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_messages_placeholder" />

    <TextView
        android:id="@+id/received_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_messages_placeholder" />

    <TextView
        android:id="@+id/total_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_messages_placeholder" />

    <TextView
        android:id="@+id/analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analysis_placeholder" />

</LinearLayout>